# python-pytest-testing-project-79

./: .flake8  Makefile  README.md  expect.htm  expected.html  pyproject.toml
.github/workflows/: python-app.yml
heclet_code/: page_loader.py
hexlet_code/: page_loader.py
tests/: test_download.py
tests/file_fixtures/: application.css  html-with-files-downloaded.html  html-with-files.html  runtime.js  simple.html
